Fix - page scroll fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
     padding: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
